<?php

namespace GrowthCode\DesignPatterns\Structural\Workflow\States;

interface StateInterface
{
    public function handle(): void;
}
